--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
     <link href="THEME.CSS" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
