--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link href="./dist/src/style/theme.css?version=undefined#undefined" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
