--- a/src/application/appLayoutView.html
+++ b/src/application/appLayoutView.html
@@ -1,4 +1,7 @@
 <div class="application-header">
+    <div class="application-header-title">
+        SERENE TESSA
+    </div>
     <div class="application-header-navigation">
         <% _.each(modules, function(module) { %>
         <a class="application-header-navigation-link" href="#<%= module.urlPrefix %>"><%= module.label %></a>
